tests/machine/x/pl/closure.out
ERROR: /workspace/mochi/tests/machine/x/pl/closure.pl:2:20: Syntax error: Operator priority clash

